@@ -1,5 +1,11 @@
 2005-03-14  Sam Steingold  <sds@gnu.org>
 
+	* modules/syscalls/calls.c (SET-FILE-STAT): available when at
+	least one of chmod(), chown() and utime() is available
+	(my_chmod, my_chown, my_utime): auxiliaries
+
+2005-03-14  Sam Steingold  <sds@gnu.org>
+
 	* modules/syscalls/posix.lisp (rlimit): added DEFSETF
 	* modules/syscalls/calls.c (SET-RLIMIT): implemented
 
